[package]
authors = ["Jonathan Creekmore <jonathan@thecreekmores.org>"]
categories = ["os::unix-apis"]
changelog = "CHANGELOG.md"
description = "Adds timeout capabilities to Readers and Writers"
documentation = "https://docs.rs/timeout-readwrite/"
homepage = "https://github.com/jcreekmore/timeout-readwrite-rs"
keywords = [
    "timeout",
    "reader",
    "writer",
]
license = "MIT/Apache-2.0"
name = "timeout-readwrite"
readme = "README.md"
repository = "https://github.com/jcreekmore/timeout-readwrite-rs"
version = "0.3.2-alpha.0"

[badges.travis-ci]
repository = "jcreekmore/timeout-readwrite-rs"

[dependencies]
nix = "0.17.0"

[dev-dependencies]
lazy_static = "1.3.0"
